--- a/templates/customer_list.html
+++ b/templates/customer_list.html
@@ -8,8 +8,10 @@
 
 <ul style="column-count: 4">
   {% for customer in customers %}
-  <li><a href="/{{ customer.id }}/">{{ customer.firstName }} {{ customer.lastName }}</a></li>
+  <li><a href="/{{ customer.id }}/">{{ customer.fullName }}</a></li>
   {% endfor %}
 </ul>
+
+<p>{{ names }}</p>
 
 {% endblock %}
